--- a/pipeline/config.yaml
+++ b/pipeline/config.yaml
@@ -28,7 +28,7 @@ SAMPLES:
     - PK65BRAIN2
     - PT46LIVER4
     - PT46TUMOR3
-    - PT65TUMOR1
+    - PK65TUMOR1
 
 INDICIES:
     - SI-GA-H5
@@ -43,3 +43,8 @@ INDICIES:
     - SI-GA-E5
 
 LANES: "5,6,7,8"
+
+EXPT_GROUPS:
+    - AML1,AML2,AML3
+    - AW1,AW2,AW3
+    - PK65TUMOR1,PK65BRAIN2,PT46LIVER4,PT46TUMOR3 
