--- a/pipeline/Snakefile
+++ b/pipeline/Snakefile
@@ -5,7 +5,7 @@ import os
 """ Snakefile for running 10x pipeline """
 # cellranger directory added to .bashrc 
 
-configfile: "new_config_test.yaml"
+configfile: "config.yaml"
 
 PROJECT = config ["PROJECT"]
 DATA = config["DATA"]
