--- a/pipeline/config.yaml
+++ b/pipeline/config.yaml
@@ -2,21 +2,19 @@
 
 DATA:
     "../runs/tmp"
+
 PROJECT:
-    "zemans"
+    "Collins"
 
 TRANSCRIPTOME:
     "/vol3/home/riemondy/Projects/shared_dbases/cell_ranger/refdata-cellranger-mm10-1.2.0"
-
-SAMPLE_SHEET: 
-    "../runs/tmp/docs/samples.txt"
 
 SAMPLES:
     - Collins_TNF_deltaARE
     - Collins_WT 
 
 EXPT_GROUPS:
-    - Collins_TNF_deltaARE,Collins_WT 
+    - Collins_TNF_deltaARE 
 
 MAX_10X_JOBS:
     30
