--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,6 +32,7 @@ environment:
   global:
     WARNINGS_ARE_ERRORS: 1
     _R_CHECK_FORCE_SUGGESTS_: 0
+    USE_RTOOLS: true
     # R_BUILD_ARGS: "--no-build-vignettes"
     # R_CHECK_ARGS: "--as-cran --ignore-vignettes"
 
