fix config file locations

--- a/pipelines/10x_3p_pipeline/10x_3p_config.yaml
+++ b/pipelines/10x_3p_pipeline/10x_3p_config.yaml
@@ -14,7 +14,7 @@ SAMPLES:
     - Collins_WT 
 
 EXPT_GROUPS:
-    - Collins_TNF_deltaARE 
+    - Collins_TNF_deltaARE,Collins_WT 
 
 MAX_10X_JOBS:
     30
