--- a/_site.yml
+++ b/_site.yml
@@ -1,8 +1,8 @@
 title: "Single-cell RNA-seq Workshop"
 output_dir: "docs"
-base_url: http://rnabioco.github.io/cellar
+base_url: https://rnabioco.github.io/cellar
+repository_url: https://github.com/rnabioco/cellar 
 favicon: img/logo.png
-exclude: ["*.xlsx"]
 navbar:
   left:
     - text: "Quality Control"
@@ -11,6 +11,5 @@ navbar:
       href: 7_multimodal.html
 output:
   distill::distill_article:
-    css: styles.css
 twitter:
   site: "@rnabioco"
