--- a/_site.yml
+++ b/_site.yml
@@ -10,6 +10,6 @@ navbar:
     - text: "Multi-modal data"
       href: 7_multimodal.html
 output:
-  distill::distill_article:
+  distill::distill_article
 twitter:
   site: "@rnabioco"
