--- a/_site.yml
+++ b/_site.yml
@@ -5,8 +5,8 @@ repository_url: https://github.com/rnabioco/cellar
 favicon: img/logo.png
 navbar:
   left:
-    - text: "Introduction"
-      href: 1_intro.html
+    - text: "Prerequisite-Material"
+      href: prerequisite.html
     - text: "Previous-workshops"
       href: previous.html
 output:
