Adding 5_trajectories and 6_alignment.
Markdown files for 5_trajectories and 6_alignment. Adding additional images to img folder. Adding obj directory with two processed .rds objects for trajectory analysis. Adding html files to docs folder, and updated _site.yml file.

--- a/_site.yml
+++ b/_site.yml
@@ -16,9 +16,9 @@ navbar:
     - text: "Cluster Markers and Cell Type Assignment"
       href: 4_markers.html
     - text: "Trajectories"
-      href: tba.html 
+      href: 5_trajectories.html
     - text: "Alignment"
-      href: tba.html 
+      href: 6_alignment.html 
     - text: "Multi-modal"
       href: 7_multimodal.html       
     - text: "VDJ"
