--- a/_site.yml
+++ b/_site.yml
@@ -16,3 +16,4 @@ navbar:
       href: previous.html
   source_url: https://github.com/rnabioco/cellar
 output: distill::distill_article
+exclude: ["data"]
